--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "postcss": "^8.4.40",
+    "postcss-cli": "^11.0.0",
     "tailwindcss": "^3.3.5"
   }
 }
